tests/samples/negative/pattern_matching/bare_enum_case_pattern.ax
module bare_enum_case_pattern;

enum Maybe {
    some(i32),
    none,
}

fn main() -> i32 {
    let value = Maybe.some(1);
    return match value {
        some(inner) => inner,
        .none => 0,
    };
}
